--- a/templates/chatbox.html
+++ b/templates/chatbox.html
@@ -49,7 +49,7 @@
                         <div class="TopicInfo">
                             <h3><a href="#">paradoxs</a></h3>
                     
-                            <h4>别去</h4>
+                            <h4 class="short_quote" id="short_quote">想出去...</h4>
                         </div>
 
                         <div class="TopicNow">
@@ -111,21 +111,32 @@
                 <img src="https://docs.htmlcsstoimage.com/assets/images/dog.jpg" alt="Avatar" >
                 <p class="quote" id="quote">想出去转转吗</p>
                 <span class="time-right">11:00</span>
-              </div>
-              
-              <div class="container darker">
-                <img src="https://docs.htmlcsstoimage.com/assets/images/dog.jpg" alt="Avatar" class="right" >
-                <p class="quote">别去</p>
-                <span class="time-left">11:01</span>
             </div>
-              
-         
-                
-        </div>  
-       
+            
+            <div id="container_response">
 
+            </div>
+            <!--
+            <div class="container darker" id="container_darker">
+                <img src="https://docs.htmlcsstoimage.com/assets/images/dog.jpg" alt="Avatar" class="right" id="img_response">
+                <p class="quote" id="response">别去</p>
+                <span class="time-left" id="time_response">11:01</span>       
+            </div>-->
 
+            
 
+        </div>
+
+        <div class="enter"> 
+                <textarea id="text" name="text" rows="4" cols="50"></textarea>
+        </div>
+
+        <div class="submit">
+            <!--<form>-->
+                <button id="response_message" class="response_message">Enter</button>
+            <!--</form>-->
+
+        </div>
 
 
     </div>
