--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -76,367 +76,28 @@ body {
     height: auto;
 }
 
-.left #table {
-    border-radius: 5px;
-    padding: 10px;
-    background-color: #18222d;
-    font-size: 18px;
-}
-
-.left #table ul {
-    text-align: center;
-}
-
-.left #table li {
-    display: inline-block;
-    padding: 3px 10px;
-}
-
-.left #table li a {
-    color: #bfbfbf;
-}
-
-.left #table li:hover {
-    background-color: #3f4f5f;
-}
-
-
-/*问题板块*/
-
-.left .content .question {
-    width: 770px;
-    height: 120px;
-    margin: 0 auto;
-    padding: 10px;
-    background-color: #18222d;
-    border: #393f4e 1px solid;
-}
-
-.left .content .question .Question_info {
-    float: left;
-    width: 600px;
-    padding: 10px auto;
-    height: 50px;
-    color: aliceblue;
-}
-
-.left .content .question .Question_info h3 a {
-    color: aliceblue;
-    font-size: 18px;
-    font-weight: 400;
-}
-
-.left .content .question .Question_info h3 a:hover {
-    text-decoration: underline;
-}
-
-.left .content .question .title {
-    padding-bottom: 13px;
-    color: #fff;
-    opacity: 0.4;
-}
-
-.left .content .question .Question_info .controll {
-    margin-top: 20px;
-    width: 40px;
+.left .friend-info {
     height: auto;
-    border-radius: 20px;
-    display: inline-block;
-    vertical-align: middle;
+    width: 770px;
+    background-color: #3e5874;
 }
 
-.left .content .question .Question_info p {
-    padding-left: 10px;
-    margin-top: 20px;
+.left .friend-info .avatar {
     display: inline-block;
-    vertical-align: middle;
-}
-
-.left .content .question .Question_info #author,
-#reply_who {
-    display: inline-block;
-    color: #9caec7;
-    font-size: 16px;
-}
-
-.left .content .question .Question_info p span {
-    display: inline-block;
-    color: #738292;
-    font-size: 12px;
-    line-height: 200%;
-}
-
-
-/* 问题面板头像部分 */
-
-.left .content .question .TopicAvatar {
-    padding-top: 2px;
-    float: right;
     width: 100px;
     height: 100px;
 }
 
-.left .content .question .TopicAvatar img {
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
+.left .friend-info .avatar img {
+    width: 70px;
+    height: 70px;
+    padding: 15px;
 }
 
-
-/*具体问题板块*/
-
-.left .content .specific_question {
-    width: 770px;
-    height: 90px;
-    margin: 0 auto;
-    padding: 10px;
-    background-color: #18222d;
-    border: #393f4e 1px solid;
-}
-
-.left .content .specific_question .Question_info h3 a {
-    color: aliceblue;
-    font-size: 15px;
-    font-weight: 400;
-}
-
-
-/*标签和时间的面板*/
-
-.left .content .timeAndTags {
-    width: 770px;
-    height: 40px;
-    margin: 0 auto;
-    padding: 10px;
-    background-color: #3e5874;
-    border: #393f4e 1px solid;
-}
-
-.left .content .timeAndTags .timeAndTags_info {
-    width: 600px;
-    padding: 10px auto;
-    height: 40px;
-    color: aliceblue;
-}
-
-.left .content .timeAndTags .timeAndTags_info p {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.left .content .timeAndTags .timeAndTags_info p span {
-    display: inline-block;
-    padding-bottom: 15px;
-    color: #738292;
-    font-size: 12px;
-    line-height: 200%;
-}
-
-.left .content .timeAndTags .timeAndTags_info #type {
-    padding: 0 10px;
-    font-size: 13px;
-    line-height: 24px;
-    background-color: #393f4e;
-    color: aliceblue;
-    border-radius: 5px;
-}
-
-.left .content .timeAndTags .timeAndTags_info #type:hover {
-    background-color: rgb(156, 174, 199);
-}
-
-
-/* 帖子展示部分 */
-
-.left .content .item {
-    width: 770px;
-    height: 80px;
-    margin: 0 auto;
-    padding: 10px;
-    background-color: #18222d;
-    border: #393f4e 1px solid;
-}
-
-
-/* 头像部分 */
-
-.left .content .item .TopicAvatar {
-    padding-top: 2px;
-    float: left;
-    width: 50px;
-    height: 50px;
-    border: #000 solid 1px;
-}
-
-.left .content .item .TopicAvatar img {
-    display: inline-block;
-    width: 48px;
-    height: 48px;
-    max-height: 48px;
-    border-radius: 10px;
-}
-
-
-/* 主要信息部分 */
-
-.left .content .item .TopicInfo {
-    float: left;
-    margin-left: 10px;
-    padding-left: 10px;
-    width: 600px;
-    padding: 10px auto;
-    height: 50px;
-    color: aliceblue;
-}
-
-.left .content .item .TopicInfo h3 a {
-    color: aliceblue;
-    font-size: 18px;
-    font-weight: 400;
-}
-
-.left .content .item .TopicInfo h3 a:hover {
-    text-decoration: underline;
-}
-
-.left .content .item .TopicInfo #type {
-    padding: 0 10px;
-    font-size: 13px;
-    line-height: 24px;
-    background-color: #393f4e;
-    color: aliceblue;
-    border-radius: 5px;
-}
-
-.left .content .item .TopicInfo #type:hover {
-    background-color: rgb(156, 174, 199);
-}
-
-.left .content .item .TopicInfo p {
-    margin-top: 5px;
-    font-size: 15px;
-}
-
-.left .content .item .TopicInfo #author,
-#reply_who {
-    display: inline-block;
-    color: #9caec7;
-    font-size: 16px;
-}
-
-.left .content .item .TopicInfo p span {
-    display: inline-block;
-    color: #738292;
-    font-size: 12px;
-    line-height: 200%;
-}
-
-.left .content .item .TopicNow {
-    float: right;
-    margin: 13px 20px 13px 0;
-    padding: 2px 6px;
-    border-radius: 8px;
-    line-height: 24px;
-    font-weight: 700;
-    font-size: 12px;
-    color: #d1d5d9;
-    background-color: rgb(57, 63, 78);
-}
-
-
-/* 右边部分 */
-
-.rightBar {
-    float: right;
-    width: 270px;
-    height: auto;
-    background-color: #fff;
-}
-
-.rightBar .box {
-    display: block;
-    width: 270px;
-    height: 170px;
-    background-color: #18222d;
-}
-
-.rightBar .box ul {
-    width: 270px;
-    height: 60px;
-    /* border-bottom: rgba(100, 100, 100, 0.4) 1px solid; */
-}
-
-.rightBar .box li {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    margin: 5px;
-}
-
-.rightBar .box #avatar {
-    max-width: 50px;
-    max-height: 50px;
-    border-radius: 10px;
-}
-
-.rightBar .box li a {
-    display: inline-block;
+.left .friend-info .info {
     vertical-align: top;
-    line-height: 50px;
-}
-
-.rightBar .box li #name {
-    padding-left: 10px;
-    font-size: 18px;
-    color: #738292;
-}
-
-.rightBar .box .box-content {
-    width: 270px;
-    height: 50px;
-    border-bottom: rgba(100, 100, 100, 0.4) 1px solid;
-}
-
-.rightBar .box .box-content table {
-    width: 100%;
-    height: 50px;
-    border: 0;
-}
-
-.rightBar .box .box-content table tr td {
-    width: 33%;
-    font-size: 16px;
-    text-align: center;
-}
-
-.rightBar .box .box-content table tr td span {
-    display: block;
-    color: #bfbfbf;
-}
-
-.rightBar .box .box-content table td:nth-child(2) {
-    width: 34%;
-    border-left: 1px solid rgba(100, 100, 100, 0.4);
-    border-right: 1px solid rgba(100, 100, 100, 0.4);
-}
-
-.create_topic {
-    width: 270px;
-    height: 50px;
-    background-color: #18222d;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    border-bottom: 1px solid rgba(100, 100, 100, 0.4);
-}
-
-.create_topic a {
     display: inline-block;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    color: #bfbfbf;
-    font-size: 18px;
-    font-weight: 500;
+    width: 600px;
+    height: 100px;
+    padding: 15px;
 }
