--- a/templates/chat.html
+++ b/templates/chat.html
@@ -27,129 +27,16 @@
     <div class="wrapper">
         <div class="sep20"></div>
         <div class="left">
-            <div class="content">
-                <div class="question">
-                    <div class="title">
-                        <h5>问与答</h5>
-                    </div>
-                    <div class="TopicAvatar">
-                        <a href="#">
-                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
-                        </a>
-                    </div>
-
-                    <div class="Question_info">
-                        <h3><a href="#">要去大城市讨生活了，有什么相见恨晚的建议吗</a></h3>
-
-                        <p>
-                            <a href="#" id="author">lucas</a>
-                            <span> · 3分钟前</span>
-                            <span> · 最后回复来自 · <a href="#" id="reply_who">lucas</a></span>
-                            <span> · 6476次点击</span>
-                        </p>
-
-                    </div>
-                </div>
-
-
-                <div class="specific_question">
-
-                    <div class="Question_info">
-                        <h3><a href="#">而立之年，相亲和被逼着相亲很痛苦</a></h3>
-                        <br>
-                        <h3><a href="#">代码写得还行 不至于饿死</a></h3>
-                    </div>
-
-                </div>
-            </div>
-
-
-            <br>
-            <br>
-
-            <div class="content" id="timeAndTags_topics">
-                <div class="timeAndTags">
-                    <div class="timeAndTags_info">
-                        <p>
-                            <span> 89条消息</span>
-                            <span> · 最后回复来自 · <a href="#" id="reply_who">lucas</a></span>
-                            <span> · 2022-05-06</span>
-                        </p>
-                    </div>
-
-                </div>
-
-            </div>
-
-
-
-            <div class="content" id="topics">
-                <div class="cell item">
-                    <div class="TopicAvatar">
-                        <a href="#">
-                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
-                        </a>
-                    </div>
-                    <div class="TopicInfo">
-                        <h3><a href="#">paradoxs</a></h3>
-                        <p>别去</p>
-                    </div>
-                    <div class="TopicNow">
-                        <p>15</p>
-                    </div>
-                </div>
-                <div class="cell item">
-                    <div class="TopicAvatar">
-                        <a href="#">
-                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
-                        </a>
-                    </div>
-                    <div class="TopicInfo">
-                        <h3><a href="#">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</a></h3>
-                        <p>
-                            攒钱
-
-                        </p>
-                    </div>
-                    <div class="TopicNow">
-                        <p>15</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="rightBar">
-            <div class="inner">
-                <div class="box">
-                    <div class="box-title">
-                        <ul>
-                            <li>
-                                <a href="#"><img id="avatar" src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar"></a>
-                            </li>
-                            <li><a id="name" href="#">lucas</a></li>
-                        </ul>
-                    </div>
-                    <div class="box-content">
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td><a href="#"><span>9</span><span>主题</span></a></td>
-                                    <td><a href="#"><span>9</span><span>emotion</span></a></td>
-                                    <td><a href="#"><span>9</span><span>好友</span></a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="create_topic">
-                        <a href="#">发布新主题</a>
-                    </div>
+            <div class="friend-info">
+                <div class="avatar"><img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar"></div>
+                <div class="info">
+                    <div class="name">lucas</div>
+                    <div class="sign">这个人很懒，什么都没有留下</div>
                 </div>
             </div>
         </div>
 
-
-    </div>
-
-    <script src="scripts/main.js"></script>
+        <script src="scripts/main.js"></script>
 </body>
 
 </html>
