--- a/static/css/member.css
+++ b/static/css/member.css
@@ -69,6 +69,7 @@ body {
 }
 
 .user-part {
+    position: relative;
     width: 770px;
     height: auto;
     margin: 0 auto;
@@ -102,12 +103,42 @@ body {
 }
 
 .user-part .user-info table {
-    width: 600px;
+    width: 500px;
     height: 70px;
     border-collapse: collapse;
     border-spacing: 0;
     font-size: 14px;
     color: #9caec7;
+}
+
+.user-part .add-friend button {
+    border: none;
+    position: absolute;
+    right: 40px;
+    top: 40px;
+    width: 30px;
+    height: 20px;
+    background-color: #0ac001;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.user-part .chat-friend button {
+    border: none;
+    position: absolute;
+    right: 40px;
+    top: 80px;
+    width: 30px;
+    height: 20px;
+    background-color: #0ac001;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.user-part button:hover {
+    background-color: #62bc5d;
+    /* 指针样式 */
+    cursor: pointer;
 }
 
 
