updata all pages

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -30,13 +30,74 @@
             <div class="friend-info">
                 <div class="avatar"><img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar"></div>
                 <div class="info">
-                    <div class="name">lucas</div>
-                    <div class="sign">这个人很懒，什么都没有留下</div>
+                    <div class="name"><a href="#">Lucas</a></div>
+                    <div class="sign">
+                        <p>这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很</p>
+                    </div>
                 </div>
             </div>
+            <div class="chat-content">
+                <div class="records">
+                    <div class="user-content">
+                        <div class="content">
+                            <p>这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下</p>
+                        </div>
+                        <div class="avatar">
+                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="">
+                        </div>
+                    </div>
+                    <div class="friend-content">
+                        <div class="avatar">
+                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="">
+                        </div>
+                        <div class="content">
+                            <p>这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下</p>
+                        </div>
+                    </div>
+                    <div class="user-content">
+                        <div class="content">
+                            <p>这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下</p>
+                        </div>
+                        <div class="avatar">
+                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="">
+                        </div>
+                    </div>
+                    <div class="friend-content">
+                        <div class="avatar">
+                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="">
+                        </div>
+                        <div class="content">
+                            <p>这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下</p>
+                        </div>
+                    </div>
+                    <div class="user-content">
+                        <div class="content">
+                            <p>这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下这个人很懒，什么都没有留下</p>
+                        </div>
+                        <div class="avatar">
+                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="chat-sender">
+                    <div class="input-text">
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="buttons">
+                        <div>
+                            <input class="refresh" type="button" value="refresh">
+                            <input class="send" type="button" value="send">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sep100"></div>
         </div>
 
-        <script src="scripts/main.js"></script>
+    </div>
+
+
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
